--- a/src/client/assets/stylesheets/progress.css
+++ b/src/client/assets/stylesheets/progress.css
@@ -2,7 +2,7 @@
 
 /* -------------------  MOBILE  --------------------- */
 header {
-  background-image: url('https://via.placeholder.com/1150');
+  background-image: url('/assets/images/car_background.png');
 }
 
 main#two-columns {
